fix z-index in form and scroll-down for correct work with ScrollReveal

--- a/src/scss/blocks/_discover.scss
+++ b/src/scss/blocks/_discover.scss
@@ -18,21 +18,28 @@
     margin-bottom: 40px;
   }
 
-  // &__form {}
+  &__form {
+    position: relative;
+    z-index: 30;
+  }
 
   &__picture {
     position: relative;
+  }
+
+  &__picture-img {
+    position: relative;
+    z-index: -1;
   }
 
   &__picture-hint {
     position: absolute;
     top: 90px;
     left: 40px;
-    z-index: 10;
   }
 
   &__picture-scroll {
-    position: absolute;
+    position: absolute;git com
     right: 15px;
     bottom: 20px;
   }
